--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Bitter', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +20,12 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+:where(.css-dev-only-do-not-override-1n7nwfa).ant-switch.ant-switch-checked:hover:not(.ant-switch-disabled) {
+  @apply bg-rose-800;
+}
+
+:where(.css-dev-only-do-not-override-1n7nwfa).ant-switch.ant-switch-checked {
+  @apply bg-rose-800;
 }
